--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,8 @@
-<div id="user-buttons">
-  <%= button_to "Sign In", login_path, method: :get %>
-  <%= button_to "Create an Account", register_path, method: :get %>
+<div id="homepage-buttons">
+  <% if current_user %>
+    <%= link_to "Log Out" %>
+  <% else %>
+    <p>Existing User? <%= link_to "Sign In", login_path %></p>
+    <p>New to Viewing Party? <%= link_to "Create an Account", register_path %></p>
+  <% end %>
 </div>
