feat: implement logout functionality

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <% if current_user %>
-  <%= link_to "Log Out" %>
+  <%= button_to "Log Out", logout_path, method: :delete %>
 <% else %>
   <div id="new_user">
     <%= button_to "Create New User", "/register", method: :get %>
