--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,17 +5,13 @@
     <%= button_to "Create New User", "/register", method: :get %>
     <%= button_to "Log In", login_path, method: :get %>
   </div>
-  <% end %>
+<% end %>
 
-<ul id="existing_users">
-  <h3>Existing Users</h3>
-  <% @users.each do |user| %>
-    <li>
-      <% if current_user %>
-        <%= link_to user.email, dashboard_path(user.id) %>
-      <% else %>
-        <%= link_to user.email, login_path %>
+<% if current_user %>
+  <ul id="existing_users">
+    <h3>Existing Users</h3>
+      <% @users.each do |user| %>
+        <li><%= user.email %></li>
       <% end %>
-    </li>
-  <% end %>
-</ul>
+  </ul>
+<% end %>
