--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,8 @@
 <div id="homepage-buttons">
-  <% if current_user %>
-    <%= link_to "Log Out" %>
+  <% if logged_in? %>
+    <%= link_to "Log Out", logout_path, data: { turbo_method: :delete } %>
   <% else %>
     <p>Existing User? <%= link_to "Sign In", login_path %></p>
     <p>New to Viewing Party? <%= link_to "Create an Account", register_path %></p>
   <% end %>
-</div>
+</div> 
