--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,12 @@
 <div id="homepage-buttons">
   <% if logged_in? %>
     <%= link_to "Log Out", logout_path, data: { turbo_method: :delete } %>
+    <div id="all-users">
+      <h3>Existing Users</h3>
+      <% @users.each do |user| %>
+        <p> <%= user.name %></p>
+      <% end %>
+    </div>
   <% else %>
     <p>Existing User? <%= link_to "Sign In", login_path %></p>
     <p>New to Viewing Party? <%= link_to "Create an Account", register_path %></p>
