--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,10 @@
     <%= f.text_field :name %>
     <%= f.label :email %>
     <%= f.text_field :email %>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+    <%= f.label :password_confirmation, "Confirm Password" %>
+    <%= f.password_field :password_confirmation %>
     <%= f.submit "Create New User" %>
   <% end %>
 </section>
