--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,8 +81,8 @@ body {
 
 .login-register-form {
   margin: auto;
-  width:fit-content;
-  border: 4px solid #AB92BF;;
+  width: fit-content;
+  border: 4px solid #AB92BF;
   padding: 10px 40px 20px 40px;
   background-color: #F1F2EB;
   border-radius: 20px;
@@ -92,3 +92,11 @@ body {
   margin: 0 10px 20px 0;
 }
 
+.flash-message {
+  margin-left: 20px;
+  width: fit-content;
+  padding: 5px 10px;
+  border: 1px solid #AB92BF;
+  font-weight: bold;
+  border-radius: 4px;
+}
