--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,9 @@
 <div id="new-user-button">
   <%= button_to "Create a New User", register_path, method: :get %>
 </div>  
+<div id="log-in-button">
+  <%= button_to "Log In", login_path, method: :get %>
+</div>
 <section id="user-list">
   <h3>Existing Users</h3>
   <ul>
