--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-  <%= link_to "Back to Home", root_path %>
+  <%= link_to "Home", root_path %>
     <%= yield %>
   </body>
 </html>
