feature: home nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+  <table>
+    <tbody>
+        <td><%= link_to "Home", "/"  %></td>
+    </tbody>
+  </table>
     <%= yield %>
   </body>
 </html>
