--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,6 @@
 <h2><%= @user.name %>'s Dashboard</h2>
 
-<%= form_with url: "users/#{@user.id}/discover", method: :get do |form| %>
-  <%= form.submit "Discover Movies" %>
-<% end %>
+<%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %>
 
 <section id="viewing_parties">
   <% @user.viewing_parties.each do |party| %>
