--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+  <% flash.each do |type, msg| %>
+    <div>
+      <%= msg %>
+    </div>
+  <% end %>
+  <h1> Viewing Party </h1>
+  <%= link_to "Home", "/" %> 
     <%= yield %>
   </body>
 </html>
