feat tests: welcome index page; header, new user button, current user email links

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h3><%= "#{@user.name}'s Dashboard" %></h3>
-<%= button_to "Discover Movies", user_discover(@user) %>
+<%= button_to "Discover Movies", user_discover_path(@user) %>
 
 <table>
   <tr>
