--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,11 @@
 <h1>Register</h1>
 
-<%= form_with model: @user, url: users_path do |form| %>
-  <%= form.label :name %>
-  <%= form.text_field :name %>
+<%= form_with model: @user, url: user_path do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
 
-  <%= form.label :email %>
-  <%= form.email_field :email %>
+  <%= f.label :email %>
+  <%= f.email_field :email %>
 
-  <%= form.submit "Register" %>
+  <%= f.submit "Register" %>
 <% end %>
