--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<%= button_to "Create a New User", register_path %>
+<%= button_to "Create a New User", register_path, method: :get %>
 
 <h3> Existing User </h3>
 
