--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @user.name %>'s Dashboard </h1>
 <h3> User email: <%= @user.email %> </h3>
 
-<%= button_to "Discover Movies" %>
+<%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %>
 
 <section class="parties">
 <h3> Viewing Party List </h3>
