--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Register</h1>
 
-<%= form_with model: @user, url: user_path do |f| %>
+<%= form_with model: @user, url: users_path do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
 
