--- a/app/views/users/discover/index.html.erb
+++ b/app/views/users/discover/index.html.erb
@@ -1,1 +1,9 @@
 <h1>Discover Movies</h1>
+
+<%= button_to "Discover Top Rated Movies", "/users/#{@user.id}/movies?top_movies=true", method: :get %>
+
+<%= form_with url: "/users/#{@user.id}/movies", method: :get, local: true, turbo: false do |f| %>
+  <%= f.label "Movie Title" %>
+  <%= f.text_field :title %>
+  <%= f.submit "Search by Movie Title" %>
+<% end %>
