--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,5 @@
 <h2>Welcome, <%= @user.name %>!</h2>
 <p>Email: <%= @user.email %></p>
 <p><%= link_to "Landing Page", root_path %></p>
+
+<h2 id="viewing_parties">My Viewing Parties</h2>
