--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,5 +3,6 @@
 <%= button_to "Discover Movies", user_discover_index_path(@user.id), method: :get %>
 
 <section id="parties">
+  <h2>~!Viewing Parties!~</h2>
   <p>Placeholder</p>
 </section>
