--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @user.name %>'s Dashboard</h1>
 
-<%= link_to "Discover Movies", discover_movies_path %>
+<%# <%= link_to "Discover Movies", discover_movies_path %> 
 
 <div class="viewing parties">
   <h2> Viewing Parties </h2>
