--- a/app/views/users/discover/index.html.erb
+++ b/app/views/users/discover/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Discover Movies</h1>
 
-<%= button_to "Discover Top Rated Movies", "/users/#{@user.id}/movies?top_movies=true", method: :get %>
+<%= button_to "Discover Top Rated Movies", "/users/#{@user.id}/movies", method: :get, data: { turbo: false }, params: {top_movies: true} %>
 
 <%= form_with url: "/users/#{@user.id}/movies", method: :get, local: true, turbo: false do |f| %>
   <%= f.label "Movie Title" %>
