--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,3 +4,5 @@
 <p><%= link_to "Landing Page", root_path %></p>
 
 <h2 id="viewing_parties">My Viewing Parties</h2>
+
+<p id="discover"><%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %></p>
