Coverage fix, register functionality

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div style="text-align: center;">
 <h1>Viewing Party Lite</h1>
 <button>
-<a href=<%= new_user_path %>>Create New User</a>
+<a href=<%= '/register' %>>Create New User</a>
 </button>
 </div>
 
