--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,6 +10,6 @@
   <%= form.text_field :name %>
   <%= form.label :email %>
   <%= form.text_field :email %>
-  <%= form.submit "Submit" %>
+  <%= form.submit "Register" %>
 <% end %>
 </section>
