--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,4 @@
-<%= link_to "Home", url: "/" %>
-<h1>Welcome to Viewing Party</h1>
-
-<%= button_to "Create a New User", "/register", method: :get, data: { turbo: false } %>
+<%= button_to "Create a New User", register_path, method: :get, data: { turbo: false } %>
 
 <h3>Existing Users</h3>
 <% @users.each do |user| %>
