--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,4 +5,4 @@
 
 <h2 id="viewing_parties">My Viewing Parties</h2>
 
-<p id="discover"><%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %></p>
+<p><%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %></p>
