--- a/app/views/movies/search.html.erb
+++ b/app/views/movies/search.html.erb
@@ -1,5 +1,9 @@
 <%= button_to "Discover Page", "/users/#{params[:id]}/discover", method: :get %><br>
 
+<% if params[:q] != "top20rated" %>
+  <h3>Movie results for: <%= params[:q] %></h3>
+<% end %>
+
 <% if @movies %>
   <% @movies.each do |movie| %>
     <section id=<%= movie[:id] %>>
