--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,12 @@
-<h1><%= "#{@user.name}s show page" %></h1>
-<p><%= "#{@user.email}s show page" %></p>
+<h1><%= "#{@user.name}'s Dashboard"%></h1>
+<p>Email: <%= "#{@user.email}" %></p>
+
+<%= button_to 'Discover Movies', user_discover_index_path(@user), method: :get %>
+<p>Parties: <%= "#{@user.parties.count}" %></p>
+<% @user.parties.each do |party| %>
+  <div id = <%= party.id %>>
+    <h3> Party ID: <%= party.id%> </h3>
+    <p> <%= party.name%> </p>
+    </div>
+  <% end %>
+
