fix: change 'create account butto'n to link and remove user param requirement

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div id="homepage-buttons">
-    <p><%= button_to "Create an Account", register_path %></p>
+    <p><%= link_to "Create an Account", register_path %></p>
     <div id="all-users">
       <h3>Existing Users</h3>
       <% @users.each do |user| %>
