--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -2,4 +2,6 @@
   <h3> <%= @movie[:title] %> </h3>
 </div>
 <div id='buttons'>
-  
+  <%= button_to "Discover Movies", user_discover_path(params[:user_id]), method: :get %>
+  <%= button_to "Create Viewing Party for #{@movie[:title]}"%>
+</div>
