--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= "#{@user.name}'s Dashboard"%></h1>
 <p>Email: <%= "#{@user.email}" %></p>
 
-<%= button_to 'Discover Movies', user_discover_index_path(@user), method: :get %>
+<%= button_to 'Discover Movies', user_discover_index_path(@user.id), method: :get %>
 <p>Parties: <%= "#{@user.parties.count}" %></p>
 <% @user.parties.each do |party| %>
   <div id = <%= party.id %>>
