--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -5,3 +5,13 @@
   <%= button_to "Discover Movies", user_discover_path(params[:user_id]), method: :get %>
   <%= button_to "Create Viewing Party for #{@movie[:title]}", new_user_movie_viewing_party_path(params[:user_id], params[:id]), method: :get %>
 </div>
+<div id='details'>
+  <table>
+    <tr>
+      <!-- figure out how to remove all the logic from the table below -->
+      <td> Vote: <%= @movie[:vote_average].round(1) %> </td>
+      <td> Runtime: <%= @movie[:runtime] %> </td>
+      <td> Genre: <%= @movie[:genres].map{|genre| genre[:name]} %> </td>
+    </tr>
+  </table>
+</div>
