--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
     <%= javascript_importmap_tags %>
   </head>
 
+  <style>
+    td, th {
+      text-align: left;
+      padding: 20px;
+    }
+  </style>
+
   <body>
   <% flash.each do |type, msg| %>
     <div>
