--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,6 +4,8 @@
 <h3> <%= @header %> </h3>
 
 <% @movies.each do |movie| %>
+  <section id="movie-<%= movie[:id]%>">
     <%= link_to movie[:title], "/users/#{params[:user_id]}/movies/#{movie[:id]}" %>
     <%=  " - Vote Average: #{movie[:vote_average]}" %></br>
-  <% end %>
+  </section>
+<% end %>
