test/feat: adds test and functionality for displaying the movie summary on the movie details page

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -17,3 +17,10 @@
     </tr>
   </table>
 </div>
+<br>
+<hr>
+<br>
+<div id='summary'>
+  <h5><strong> Summary </strong></h5>
+  <%= @movie[:overview] %>
+</div>
