--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,11 @@
 <h3><%= @user.name %>'s Dashboard</h3>
 
 <%= button_to "Discover Movies", "#{user_path(@user)}/discover", method: :get, data: {turbo: false} %>
-
+<hr/>
 <section class="viewing_parties">
-  
+  <% @parties.each do |party| %>
+    <%= party.movie_title %><br>
+    <%= party.formated_time %><br>
+    <%= party.host?(@user) %><br>
+  <% end %>
 </section>
