Weston(24) Spec: MovieDBService.new test pass Add: movie_details fixtures .json Spec: User Show Page - failed deleted code FactoryBot: add associations FactoryBot: add email and name faker FactoryBot: add Faker for movie Add: spec_helper VCR and webmock Add: rails_helper VCR configure and factorybot Migration: viewing_parties boolean is_host Schema: t.boolean is_host Routes: delete user only and replace with just user credentials: added secret keys Replace: user show page to include with_index Replace: httparty with faraday Create: Review Poro Create: Movie Poro Create: Cast Poro Add: scope for hosted_by is true Replace: has_many viewing parties and users, through :viewing_parties Create: Movie Facade Delete: users controller nested through api/v1 Add: @movie_details in show action of Users Controllers Replace: movies_controller show action

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,5 @@
 <h1><%= @user.name %>'s Dashboard</h1>
 
-<%# <%= link_to "Discover Movies", discover_movies_path %> 
 
 <div class="viewing parties">
   <h2> Viewing Parties </h2>
@@ -8,14 +7,15 @@
     <p> No viewing parties scheduled. </p>
   <% else %>
     <ul>
-      <% @viewing_parties.each do |party| %>
-        <li>
-          <p>Movie: <%= party.movie_title %></p>
-          <p>Date: <%= party.date %></p>
-          <p>Time: <%= party.time %></p>
-          <%= link_to "Join", viewing_party_path(party) %>
-        </li>
-      <% end %>
-    </ul>
+    <% @viewing_parties.each_with_index do |party, index| %>
+      <div class="party">
+        <%= image_tag @movie_details[index].image %> 
+        <h2><%= link_to @movie_details[index].title, movie_path(party.movie_id) %></h2>
+        <p><%= @movie_details[index].description %></p>
+        <p><%= party.is_host ? 'Hosting' : 'Invited' %></p>
+        <p><%= party.date_time.strftime('%B %d, %Y %I:%M %p') %></p>
+      </div>
+    <% end %>
+        </ul>
   <% end %>
 </div>
