feat: add top 20 and search feature to search page
Co-authored-by: Antoine Aube <55931218+Antoine-Aube@users.noreply.github.com>

--- a/app/views/movies/search.html.erb
+++ b/app/views/movies/search.html.erb
@@ -7,7 +7,7 @@
 <% if @movies %>
   <% @movies.each do |movie| %>
     <section id=<%= movie[:id] %>>
-      <%= link_to "#{movie[:original_title]}", "/users/#{params[:id]}/movies/#{movie[:id]}" %>
+      <%= link_to "#{movie[:title]}", "/users/#{params[:id]}/movies/#{movie[:id]}" %>
       <p>Vote Average: <%= movie[:vote_average] %></p>
     </section>
   <% end %>
