--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,6 @@
 <center><%= button_to "Create New User", "/register/new", method: :get%>
 
 <% @users.each do |user| %>
-  <p><%= link_to user.name %></p>
+  <p><%= link_to user.name, "/users/#{user.id}" %></p>
 <%end %>
 </ul>
