--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1> <%= @user.name %> Dashboard </h1>
 
 <button> 
-<a>Discover Movies</a>
+<a><%= link_to 'Discover Movies', user_discover_index_path(@user) %></a>
 </button> 
 
