refactor: change link to discover page to button
Co-authored-by: Kaylee Janes <132856753+kbug819@users.noreply.github.com>

--- a/app/views/users/movies/index.html.erb
+++ b/app/views/users/movies/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Return to Discover Page", "/users/#{@user.id}/discover" %>
+<%= button_to "Return to Discover Page", "/users/#{@user.id}/discover", method: :get %>
 <h1><%= @header %></h1>
 <% @movies.each do |movie| %>
   <p><%= link_to "#{movie[:title]}", "/users/#{@user.id}/movies/#{movie[:id]}" %>
