feat: shows total reviews on the movie details page

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -40,3 +40,7 @@
     <% end %>
   </table>
 </div>
+<br>
+<div id='reviews'>
+  <h4><strong> <%= @reviews[:total_results] %> Reviews </strong></h4>
+</div>
