feat: adds functionality to show a review, its author, and the review rating on the movie details page

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -43,4 +43,7 @@
 <br>
 <div id='reviews'>
   <h4><strong> <%= @reviews[:total_results] %> Reviews </strong></h4>
+  <% @reviews[:results].each do |review| %>
+    <%= "#{review[:content]} - #{review[:author]}, #{review[:author_details][:rating].to_i}/10" %>
+  <% end %>
 </div>
