--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h3> Register a New User </h3>
 
-<%= form_with url: "/user", method: :post, data: { turbo: false } do |f| %>
+<%= form_with url: "/users", method: :post, data: { turbo: false } do |f| %>
 
   <%= f.label :name %>
   <%= f.text_field :name %></br>
