--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,11 @@
 <h1><%= "#{@user.name}'s Dashboard"%></h1>
 <p>Email: <%= "#{@user.email}" %></p>
-
 <%= button_to 'Discover Movies', user_discover_index_path(@user.id), method: :get %>
 <p>Parties: <%= "#{@user.parties.count}" %></p>
 <% @user.parties.each do |party| %>
   <div id = <%= party.id %>>
     <h3> Party ID: <%= party.id%> </h3>
-    <p> <%= party.name%> </p>
+    <p> <%= party.movie_title%> </p>
     </div>
   <% end %>
 
