Movie results page displaying the correct results

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,8 +1,9 @@
 <h1> Movie Results </h1>
+<%= button_to "Discover Page", user_discover_index_path(@user), method: :get %>
 <h1><%= @facade.movies.count %> Results </h1>
 <% @facade.movies.each do |movie| %>
   <ul class="movie">
-  <li class="title">Movie Title: <%= movie.title %></li>
+  <li> <%= link_to movie.title, user_movie_path(@user, movie.id), method: :get %></li>
   <li class="vote_average">Movie Vote Average: <%= movie.vote_average %></li>
   <li class="title">Movie Overview: <%= movie.overview %></li>
 </ul>
