--- a/app/views/users/movies/viewing_parties/new.html.erb
+++ b/app/views/users/movies/viewing_parties/new.html.erb
@@ -1,11 +1,12 @@
 <h1><%= @movie[:title]%> Viewing Party </h1>
-<%= form_with url: user_movie_viewing_parties_path(@user, @movie), method: :post do |f| %>
+<%= form_with url: user_movie_viewing_parties_path(@user, @movie[:id]), method: :post do |f| %>
+  <%= f.hidden_field :runtime, value: "#{@movie[:runtime]}" %>
   <%= f.label "Duration" %>
-  <%= f.text_field "Duration", value: "#{@movie[:runtime]}"%><br><br>
+  <%= f.text_field :duration, value: "#{@movie[:runtime]}"%><br><br>
   <%= f.label "When:" %>
-  <%= f.date_field "When:" %><br><br>
+  <%= f.date_field :date %><br><br>
   <%= f.label "Start Time"%>
-  <%= f.time_field "Start Time"%><br><br>
+  <%= f.time_field :start_time%><br><br>
   <p> Check users to attend: </p>
   <% @users.each do |user| %>
     <%= f.label "#{user.name}"%>
