refactor: adds movie service and facade, refactors show page to use

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,19 +1,19 @@
 <div id='sub_header'>
-  <h3> <%= @movie[:title] %> </h3>
+  <h3> <%= @facade.movie[:title] %> </h3>
 </div>
 <div id='buttons'>
   <%= button_to "Discover Movies", user_discover_path(params[:user_id]), method: :get %>
   <br>
-  <%= button_to "Create Viewing Party for #{@movie[:title]}", new_user_movie_viewing_party_path(params[:user_id], params[:id]), method: :get %>
+  <%= button_to "Create Viewing Party for #{@facade.movie[:title]}", new_user_movie_viewing_party_path(params[:user_id], params[:id]), method: :get %>
 </div>
 <br>
 <div id='details'>
   <table>
     <tr>
       <!-- figure out how to remove all the logic from the table below -->
-      <td> Vote: <%= @movie[:vote_average].round(1) %> </td>
-      <td> Runtime: <%= @movie[:runtime] %> minutes </td>
-      <td> Genre: <%= @movie[:genres].map{|genre| genre[:name]}.join(', ') %> </td>
+      <td> Vote: <%= @facade.movie[:vote_average].round(1) %> </td>
+      <td> Runtime: <%= @facade.movie[:runtime] %> minutes </td>
+      <td> Genre: <%= @facade.movie[:genres].map{|genre| genre[:name]}.join(', ') %> </td>
     </tr>
   </table>
 </div>
@@ -22,7 +22,7 @@
 <br>
 <div id='summary'>
   <h4><strong> Summary </strong></h4>
-  <%= @movie[:overview] %>
+  <%= @facade.movie[:overview] %>
 </div>
 <br>
 <div id='cast'>
@@ -32,7 +32,7 @@
       <th> Character </th>
       <th> Actor </th>
     </tr>
-    <% @cast.each do |member| %>
+    <% @facade.cast.each do |member| %>
       <tr>
         <td><%= member[:character] %></td>
         <td><%= member[:name] %></td>
@@ -42,8 +42,8 @@
 </div>
 <br>
 <div id='reviews'>
-  <h4><strong> <%= @reviews[:total_results] %> Reviews </strong></h4>
-  <% @reviews[:results].each do |review| %>
+  <h4><strong> <%= @facade.reviews[:total_results] %> Reviews </strong></h4>
+  <% @facade.reviews[:results].each do |review| %>
     <%= "#{review[:content]} - #{review[:author]}, #{review[:author_details][:rating].to_i}/10" %>
   <% end %>
 </div>
