Weston(8) Spec: User show page initial dashboard test - pass Add: record: new episodes for VCR in rails helper Delete: @movie_details.image for now supposed to be poster_path Replace: connection -> conn in Movie_db_service Add: poster path to attr_reader in Movie Poro Add: strict load true for Application record Replace: instance methods to class methods for movie_facade Add: includes viewing parties for User show action

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,8 +9,7 @@
     <ul>
     <% @viewing_parties.each_with_index do |party, index| %>
       <div class="party">
-        <%= image_tag @movie_details[index].image %> 
-        <h2><%= link_to @movie_details[index].title, movie_path(party.movie_id) %></h2>
+        <h2><%= link_to @movie_details[index].title, user_movie_path(party.movie_id) %></h2>
         <p><%= @movie_details[index].description %></p>
         <p><%= party.is_host ? 'Hosting' : 'Invited' %></p>
         <p><%= party.date_time.strftime('%B %d, %Y %I:%M %p') %></p>
