--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,11 +9,15 @@
     <p><%= image_tag "#{party.image_url}" %></p>
     <p><%= party.movie_title %></p>
     <p><%= party.start %></p>
-    <p><%= party.host %></p>
+    <p>Host: <%= party.host %></p>
     <ul>
     <p>Guests</p>
     <% party.guests.each do |guest| %>
+      <% if guest.name == @user.name %>
+        <li><strong><%= guest.name %></strong></li>
+      <% else %>
         <li><%= guest.name %></li>
+      <% end %>
     <% end %>
     </ul>
     <hr>
