--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,20 @@
 
 <%= button_to "Discover Movies", user_discover_index_path(@user.id), method: :get %>
 
-<section id="parties">
-  <h2>~!Viewing Parties!~</h2>
-  <p>Placeholder</p>
+<h2>~!Viewing Parties!~</h2>
+<section id="hosted-parties">
+  <h3>My Parties</h3>
+  <% @user.parties.each do |party| %>
+    <section id="party-<%= party.id %>">
+      <img src="https://image.tmdb.org/t/p/w185/b0Ej6fnXAP8fK75hlyi2jKqdhHz.jpg">
+      <p>
+        Movie Title: The Equalizer 3<br>
+        Duration: <%= party.duration %> minutes<br>
+        Date: <%= party.date.strftime("%b %d, %Y") %><br>
+        Start Time: <%= party.start_time.strftime("%I:%M %p") %><br>
+        Host: *create query*<br>
+        Guest List: *create query*<br>
+      </p>
+    </section>
+  <% end %>
 </section>
