--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,28 @@
-<h1><%= @user.name %>'s Dashboard</h1>
+<h1><%= @facade.user.name %>'s Dashboard</h1>
 
-<%= button_to "Discover Movies", user_discover_index_path(@user.id), method: :get %>
+<%= button_to "Discover Movies", user_discover_index_path(@facade.user.id), method: :get %>
 
 <h2>~!Viewing Parties!~</h2>
 <section id="hosted-parties">
   <h3>My Parties</h3>
-  <% @user.parties.each do |party| %>
+  <% @facade.user.parties.each do |party| %>
     <section id="party-<%= party.id %>">
-      <img src="https://image.tmdb.org/t/p/w185/b0Ej6fnXAP8fK75hlyi2jKqdhHz.jpg">
+      <img src="<%= @facade.movie_poster_link(party.movie_id) %>">
       <p>
-        Movie Title: The Equalizer 3<br>
+        Movie Title: <%= @facade.get_movie_title(party.movie_id) %><br>
         Duration: <%= party.duration %> minutes<br>
         Date: <%= party.date.strftime("%b %d, %Y") %><br>
         Start Time: <%= party.start_time.strftime("%I:%M %p") %><br>
         Host: <%= party.get_host_name %><br>
-        Guest List: *create query*<br>
+        Guest List:
+          <% party.get_guest_names.each do |name| %>
+            <% if name == party.get_guest_names.last %>
+              <%= name == @facade.user.name ? "<b>#{name}</b>" : "#{name}" %>
+            <% else %>
+              <%= name == @facade.user.name ? "<b>#{name}</b>, " : "#{name}, " %>
+            <% end %>
+          <% end %>
+        <br>
       </p>
     </section>
   <% end %>
