--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,28 @@
 <h2>~!Viewing Parties!~</h2>
 <section id="hosted-parties">
   <h3>My Parties</h3>
-  <% @facade.user.parties.each do |party| %>
+  <% @facade.user.hosted_parties.each do |party| %>
+    <section id="party-<%= party.id %>">
+      <img src="<%= @facade.movie_poster_link(party.movie_id) %>">
+      <p>
+        Movie Title: <%= @facade.get_movie_title(party.movie_id) %><br>
+        Duration: <%= party.duration %> minutes<br>
+        Date: <%= party.date.strftime("%b %d, %Y") %><br>
+        Start Time: <%= party.start_time.strftime("%I:%M %p") %><br>
+        Host: <%= party.get_host_name %><br>
+        Guest List:
+          <% party.get_guest_names.each do |name| %>
+            <%= name == party.get_guest_names.last ? name : "#{name}, "%>
+          <% end %>
+        <br>
+      </p>
+    </section>
+  <% end %>
+</section>
+
+<section id="invited-parties">
+  <h3>My Party Invites</h3>
+  <% @facade.user.invited_parties.each do |party| %>
     <section id="party-<%= party.id %>">
       <img src="<%= @facade.movie_poster_link(party.movie_id) %>">
       <p>
@@ -17,9 +38,9 @@
         Guest List:
           <% party.get_guest_names.each do |name| %>
             <% if name == party.get_guest_names.last %>
-              <%= name == @facade.user.name ? "<b>#{name}</b>" : "#{name}" %>
+              <%= name == @facade.user.name ? "<strong>#{name}</strong>".html_safe : "#{name}" %>
             <% else %>
-              <%= name == @facade.user.name ? "<b>#{name}</b>, " : "#{name}, " %>
+              <%= name == @facade.user.name ? "<strong>#{name}</strong>, ".html_safe : "#{name}, " %>
             <% end %>
           <% end %>
         <br>
