--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,11 @@
 
 <%=  button_to "Discover Movies", user_discover_path(params[:user_id]), method: :get %>
 
-<h3> <%= @header %> </h3>
+<% if params[:q] == "keyword" %>
+  <h3> Movie results for: <%= params[:search] %>
+<% else %>
+  <h3> Top 20 Movies </h3>
+<% end %>
 
 <% @movies.each do |movie| %>
   <section id="movie-<%= movie[:id]%>">
