--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
-<h1><%= @user.name %>'s Dashboard</h1>
+<h2><%= @user.name %>'s Dashboard</h2>
 
-<%= button_to "Discover Movies", user_discover_index_path(@user.id), method: :get %>
+<button>
+    <%= link_to 'Discover Movies', user_discover_index_path(@user) %>
+</button>
 
 <section id="parties">
   <h2>~!Viewing Parties!~</h2>
