Added check box function to new viewing party and functionality to dashboard viewing parties

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,6 @@
         <%= form.label :description %>
         <%= form.text_field :description %>
         <%= form.label :email %>
-        <%= form.number_field :email %>
+        <%= form.text_field :email %>
         <%= form.submit value: "Register"%>
 <% end %>
