--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -9,7 +9,7 @@
   <%= form.label :start_time, "Start of Party" %>
   <%= form.hidden_field :status, value: "host" %>
   <% @users.each do |user| %>
-      <p><%= check_box_tag(user.id, hidden_field: :status, value: "attending") %> <%= form.label "#{user.id}", "#{user.name} (#{user.email})" %></p>
+      <p><%= check_box_tag(user.id, hidden_field: :status, value: "attending #{user.id}") %> <%= form.label "#{user.id}", "#{user.name} (#{user.email})" %></p>
     <% end %><br>
   <%= form.submit "Create Party" %>
 <% end%>
