--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,19 +1,19 @@
 <div id='sub_header'>
-  <h3> <%= @facade.movie[:title] %> </h3>
+  <h3> <%= @facade.movie.title %> </h3>
 </div>
 <div id='buttons'>
   <%= button_to "Discover Movies", user_discover_path(params[:user_id]), method: :get %>
   <br>
-  <%= button_to "Create Viewing Party for #{@facade.movie[:title]}", new_user_movie_viewing_party_path(params[:user_id], params[:id]), method: :get %>
+  <%= button_to "Create Viewing Party for #{@facade.movie.title}", new_user_movie_viewing_party_path(params[:user_id], params[:id]), method: :get %>
 </div>
 <br>
 <div id='details'>
   <table>
     <tr>
       <!-- figure out how to remove all the logic from the table below -->
-      <td> Vote: <%= @facade.movie[:vote_average].round(1) %> </td>
-      <td> Runtime: <%= @facade.movie[:runtime] %> minutes </td>
-      <td> Genre: <%= @facade.movie[:genres].map{|genre| genre[:name]}.join(', ') %> </td>
+      <td> Vote: <%= @facade.movie.vote_average %> </td>
+      <td> Runtime: <%= @facade.movie.runtime %> minutes </td>
+      <td> Genre: <%= @facade.movie.genres %> </td>
     </tr>
   </table>
 </div>
@@ -22,7 +22,7 @@
 <br>
 <div id='summary'>
   <h4><strong> Summary </strong></h4>
-  <%= @facade.movie[:overview] %>
+  <%= @facade.movie.summary %>
 </div>
 <br>
 <div id='cast'>
