--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,5 +1,31 @@
 <div class="details-buttons">
-  <h2><%= @facade.movies_details.title %></h2>
+  <h2><%= @facade.movie_details.title %></h2>
   <%= button_to "Discover Page", user_discover_index_path(@user), method: :get %>
-  
+  <%= button_to "Create New Viewing Party", new_user_movie_viewing_party_path(@user, @movie_id), method: :get %>
+
+  <div id="top-movie-info">
+   <p>Vote: <%= @facade.movie_details.vote_average %></p>
+   <p>Runtime: <%= @facade.movie_details.format_runtime%></p>
+   <p>Genre: 
+     <%= @facade.movie_details.genre_info %></p>
+  </div>
+
+  <div id="movie-summery">
+    <h4>Summary</h4>
+    <p><%= @facade.movie_details.overview %>
+  </div>
+
+  <div id="movie-cast">
+    <h4>Cast</h4>
+    <% @facade.movie_actors.each do |actor| %>
+     <p id="actors"><%= actor.name %></p>
+    <% end %>
+  </div>
+
+  <div id="movie-reviews">
+    <h4><%= @facade.movie_review_count %> Reviews</h4>
+    <% @facade.movie_reviews.each do |review| %>
+      <p><%= review.content %> Written by <%= review.author %></p>
+    <% end %>
+  </div>
   
