--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,8 +1,11 @@
-<h1>Discover Movies</h1>
+<center><h1>Discover Movies</h1></center>
 
-<%= button_to "Find Top Rated Movies", "/users/#{params[:id]}/movies", params: { q: "top20rated" }, method: :get %>
+<center><%= button_to "Find Top Rated Movies", "/users/#{params[:id]}/movies", params: { q: "top20rated" }, method: :get %></center>
+<br>
 
+<center>
 <%= form_with url: "/users/#{params[:id]}/movies", method: :get, data: { turbo: false } do |form| %>
   <%= form.text_field :q, placeholder: "search" %>
   <%= form.submit "Find Movies" %>
 <% end %>
+</center>
